k8s/webapp/1-deployment-flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: blood-bowl-league-manager
  labels:
    deployment: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: blood-bowl-league-manager
          image: barryallenofearth/blood-bowl-league-manager:1
          resources: { }
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /app/blood-bowl-league-manager/data/leagues.csv
              name: data-files
              subPath: leagues.csv
            - mountPath: /app/blood-bowl-league-manager/data/seasons.csv
              name: data-files
              subPath: seasons.csv
            - mountPath: /app/blood-bowl-league-manager/data/races.csv
              name: data-files
              subPath: races.csv
            - mountPath: /app/blood-bowl-league-manager/data/teams_and_coaches.csv
              name: data-files
              subPath: teams_and_coaches.csv
            - mountPath: /app/blood-bowl-league-manager/data/matches.csv
              name: data-files
              subPath: matches.csv
            - mountPath: /app/blood-bowl-league-manager/data/additional_statistics.csv
              name: data-files
              subPath: additional_statistics.csv
          livenessProbe:
            httpGet:
              path: /health
              port: 80
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          startupProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 30
            timeoutSeconds: 30
            failureThreshold: 3
            successThreshold: 1
      volumes:
        - name: data-files
          configMap:
            name: init-files-blood-bowl-league-manager
