k8s/webapp/2-service-flask.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: webapp
  name: webapp
  namespace: blood-bowl-season-manager
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: webapp
  type: LoadBalancer
