k8s/webapp/3-service-flask.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: webapp
  name: webapp
  namespace: blood-bowl-league-manager
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app: webapp
  type: LoadBalancer
