k8s/webapp/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blood-bowl
  namespace: blood-bowl-league-manager
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - thinkcentre-m92p.fritz.box
      secretName: ingress-cert
  rules:
  - host: thinkcentre-m92p.fritz.box
    http:
        paths:
          - path: /blood-bowl(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: webapp
                port:
                  name: http
